@@ -14,6 +14,7 @@
 % hyperlinks:
 \ifthenelse{\isundefined{\hypersetup}}{
   \usepackage[colorlinks=true,linkcolor=blue,urlcolor=blue]{hyperref}
+  \urlstyle{same} % normal text font (alternatives: tt, rm, sf)
 }{}
 \hypersetup{
   pdfauthor={Foo Fred;Bar Barney}
