@@ -164,6 +164,7 @@
 % hyperlinks:
 \ifthenelse{\isundefined{\hypersetup}}{
   \usepackage[colorlinks=true,linkcolor=blue,urlcolor=blue]{hyperref}
+  \urlstyle{same} % normal text font (alternatives: tt, rm, sf)
 }{}
 \hypersetup{
   pdftitle={reStructuredText Test Document},
@@ -344,16 +345,16 @@ A paragraph.
 
 Paragraphs contain text and may contain inline markup: \emph{emphasis},
 \textbf{strong emphasis}, \texttt{inline literals}, standalone hyperlinks
-(\href{http://www.python.org}{http://www.python.org}), external hyperlinks (\href{http://www.python.org/}{Python}\DUfootnotemark{id27}{id26}{5}), internal
+(\url{http://www.python.org}), external hyperlinks (\href{http://www.python.org/}{Python}\DUfootnotemark{id30}{id29}{5}), internal
 cross-references (\hyperref[example]{example}), external hyperlinks with embedded URIs
 (\href{http://www.python.org}{Python web site}), \href{http://www.python.org/}{anonymous hyperlink
-references}\DUfootnotemark{id30}{id26}{5} (\href{http://docutils.sourceforge.net/}{a second reference}\DUfootnotemark{id32}{id31}{6}), footnote references (manually
+references}\DUfootnotemark{id33}{id29}{5} (\href{http://docutils.sourceforge.net/}{a second reference}\DUfootnotemark{id35}{id34}{6}), footnote references (manually
 numbered\DUfootnotemark{id1}{id8}{1}, anonymous auto-numbered\DUfootnotemark{id2}{id12}{3}, labeled auto-numbered\DUfootnotemark{id3}{label}{2}, or symbolic\DUfootnotemark{id4}{id13}{*}), citation references ([\hyperlink{cit2002}{CIT2002}]),
 substitution references (\includegraphics{../../../docs/user/rst/images/biohazard.png}), and %
 \phantomsection\label{inline-hyperlink-targets}inline hyperlink targets
 (see \hyperref[targets]{Targets} below for a reference back to here).  Character-level
 inline markup is also possible (although exceedingly ugly!) in \emph{re}\texttt{Structured}\emph{Text}.  Problems are indicated by %
-\raisebox{1em}{\hypertarget{id25}{}}\hyperlink{id24}{\textbf{\color{red}|problematic|}} text
+\raisebox{1em}{\hypertarget{id28}{}}\hyperlink{id27}{\textbf{\color{red}|problematic|}} text
 (generated by processing errors; this one is intentional).  Here is a
 reference to the \hyperref[doctitle]{doctitle} and the \hyperref[subtitle]{subtitle}.
 
@@ -811,8 +812,8 @@ This footnote shows the next symbol in the sequence.
 \DUfootnotetext{id16}{id16}{4}{
 Here's an unreferenced footnote, with a reference to a
 nonexistent footnote:%
-\raisebox{1em}{\hypertarget{id34}{}}%
-\raisebox{1em}{\hypertarget{id17}{}}\hyperlink{id33}{\textbf{\color{red}{[}5{]}\_}}.
+\raisebox{1em}{\hypertarget{id41}{}}%
+\raisebox{1em}{\hypertarget{id17}{}}\hyperlink{id40}{\textbf{\color{red}{[}5{]}\_}}.
 }
 
 
@@ -829,8 +830,8 @@ rendered separately and differently from footnotes.
 \end{figure}
 
 Here's a reference to the above, [\hyperlink{cit2002}{CIT2002}], and a %
-\raisebox{1em}{\hypertarget{id36}{}}%
-\raisebox{1em}{\hypertarget{id19}{}}\hyperlink{id35}{\textbf{\color{red}{[}nonexistent{]}\_}}
+\raisebox{1em}{\hypertarget{id43}{}}%
+\raisebox{1em}{\hypertarget{id19}{}}\hyperlink{id42}{\textbf{\color{red}{[}nonexistent{]}\_}}
 citation.
 
 
@@ -852,13 +853,13 @@ Section headers are implicit targets, referred to by name. See
 \hyperref[targets]{Targets}, which is a subsection of \hyperref[body-elements]{Body Elements}.
 
 Explicit external targets are interpolated into references such as
-``\href{http://www.python.org/}{Python}\DUfootnotemark{id28}{id26}{5}''.
+``\href{http://www.python.org/}{Python}\DUfootnotemark{id31}{id29}{5}''.
 
 Targets may be indirect and anonymous.  Thus \hyperref[targets]{this phrase} may also
 refer to the \hyperref[targets]{Targets} section.
 
 Here's a %
-\raisebox{1em}{\hypertarget{id38}{}}\hyperlink{id37}{\textbf{\color{red}`hyperlink reference without a target`\_}}, which generates an
+\raisebox{1em}{\hypertarget{id45}{}}\hyperlink{id44}{\textbf{\color{red}`hyperlink reference without a target`\_}}, which generates an
 error.
 
 
@@ -886,7 +887,7 @@ explicit targets will generate ``warning'' (level-2) system messages.
 Since there are two ``Duplicate Target Names'' section headers, we
 cannot uniquely refer to either of them by name.  If we try to (like
 this: %
-\raisebox{1em}{\hypertarget{id40}{}}\hyperlink{id39}{\textbf{\color{red}`Duplicate Target Names`\_}}), an error is generated.
+\raisebox{1em}{\hypertarget{id47}{}}\hyperlink{id46}{\textbf{\color{red}`Duplicate Target Names`\_}}), an error is generated.
 
 
 %___________________________________________________________________________
@@ -900,7 +901,7 @@ this: %
 \phantomsection\label{contents}
 These are just a sample of the many reStructuredText Directives.  For
 others, please see
-\href{http://docutils.sourceforge.net/docs/ref/rst/directives.html}{http://docutils.sourceforge.net/docs/ref/rst/directives.html}.
+\url{http://docutils.sourceforge.net/docs/ref/rst/directives.html}.
 
 
 %___________________________________________________________________________
@@ -1182,12 +1183,16 @@ allowed (e.g. inside a directive).
   \label{target-footnotes}%
 }
 %
-\DUfootnotetext{id26}{id27}{5}{
-\href{http://www.python.org/}{http://www.python.org/}
+\DUfootnotetext{id29}{id30}{5}{
+\url{http://www.python.org/}
 }
 %
-\DUfootnotetext{id31}{id32}{6}{
-\href{http://docutils.sourceforge.net/}{http://docutils.sourceforge.net/}
+\DUfootnotetext{id34}{id35}{6}{
+\url{http://docutils.sourceforge.net/}
+}
+%
+\DUfootnotetext{id36}{id37}{7}{
+\url{A:DOS\\path\\}
 }
 
 
@@ -1199,7 +1204,7 @@ allowed (e.g. inside a directive).
   \label{replacement-text}%
 }
 
-I recommend you try \href{http://www.python.org/}{Python, \emph{the} best language around}\DUfootnotemark{id29}{id26}{5}.
+I recommend you try \href{http://www.python.org/}{Python, \emph{the} best language around}\DUfootnotemark{id32}{id29}{5}.
 
 
 %___________________________________________________________________________
@@ -1900,6 +1905,95 @@ See \hyperref[hypertarget-in-plain-text]{hypertarget in plain text},
 \hyperref[hypertarget-in-figure-caption]{hypertarget in figure caption}, and
 \hyperref[hypertarget-in-figure-legend]{hypertarget in figure legend},
 
+
+%___________________________________________________________________________
+
+\subsection*{3.7~~~External references%
+  \phantomsection%
+  \addcontentsline{toc}{subsection}{3.7~~~External references}%
+  \label{external-references}%
+}
+
+Long URLs should be wrapped in the PDF.
+This can be achieved with the url command which is used by the LaTeX writer
+wheneve the content (name) of a reference node equals the link URL.
+%
+\begin{description}
+\item[{Example:}] \leavevmode 
+a long URL that should wrap in the output
+\url{http://docutils.sourceforge.net/docs/user/latex.html\#id79}
+
+\end{description}
+
+If the argument contains any ``\%'', ``\#'', or ``\textasciicircum{}\textasciicircum{}'', or ends with \texttt{\textbackslash{}}, it can't
+be used in the argument to another command. The argument must not contain
+unbalanced braces.
+
+The characters \textasciicircum{}, \{, \}, and \texttt{\textbackslash{}} are invalid in a ``http:'' or ``ftp:'' URL
+and not recognized as part of it:
+
+\begin{DUlineblock}{0em}
+\item[] \url{http://www.example.org}/strange\textasciicircum{}\textasciicircum{}name
+\item[] \url{http://www.example.org}\textbackslash{}using\textbackslash{}DOS\textbackslash{}paths\textbackslash{}
+\item[] \url{http://www.example.org/XML}/strange\{n\}ame
+\end{DUlineblock}
+
+They can, however be used in paths and/or filenames.
+
+Handling by the LaTeX writer:
+%
+\begin{itemize}
+
+\item \texttt{\#}, \texttt{\textbackslash{}} and \texttt{\%} are escaped:
+
+\begin{DUlineblock}{0em}
+\item[] \href{http://www.w3.org/XML/Schema\#dev}{URL with \#}
+\url{http://www.w3.org/XML/Schema\#dev}
+\item[] \href{http://www.w3.org/XML/Schema\%dev}{URL with \%}
+\url{http://example.org/Schema\%dev}
+\item[] \href{A:DOS\\path\\}{file with DOS path}\DUfootnotemark{id37}{id36}{7} \url{A:DOS\\path\\}\DUfootnotemark{id38}{id36}{7}
+\end{DUlineblock}
+
+\DUadmonition[note]{
+\DUtitle[note]{Note}
+
+These URLs are typeset inside a LaTeX command without error.
+
+\begin{DUlineblock}{0em}
+\item[] \url{http://www.w3.org/XML/Schema\#dev}
+\item[] \url{http://example.org/Schema\%dev}
+\item[] \url{A:DOS\\path\\}\DUfootnotemark{id39}{id36}{7}
+\end{DUlineblock}
+}
+
+\end{itemize}
+%
+\begin{itemize}
+
+\item \textasciicircum{}\textasciicircum{} LaTeX's special syntax for characters results in ``strange'' replacements
+(both with href and url). A warning is given.
+
+\href{../strange^^name}{file with \textasciicircum{}\textasciicircum{}}:
+\url{../strange^^name}
+
+\item Unbalanced braces, \{ or \}, will fail (both with href and url):
+%
+\begin{quote}{\ttfamily \raggedright \noindent
+`file~with~\{~<../strange\{name>`\_\_\\
+`<../strange\{name>`\_\_
+}
+\end{quote}
+
+while balanced braces are suported:
+
+\begin{DUlineblock}{0em}
+\item[] \url{../strange{n}ame}
+\item[] \url{../st{r}ange{n}ame}
+\item[] \url{../{st{r}ange{n}ame}}
+\end{DUlineblock}
+
+\end{itemize}
+
 % unusual combinations (from newlatex, for interactive testing)
 % .. include:: data/latex.txt
 
@@ -1931,51 +2025,51 @@ section, ``Docutils System Messages'':
 
 \DUadmonition[system-message]{
 \DUtitle[system-message]{system-message}
-\raisebox{1em}{\hypertarget{id24}{}}
+\raisebox{1em}{\hypertarget{id27}{}}
 
 {\color{red}ERROR/3} in \texttt{functional/input/data/standard.txt}, line~104
 
-\hyperlink{id25}{
+\hyperlink{id28}{
 Undefined substitution referenced: ``problematic''.
 }}
 
 \DUadmonition[system-message]{
 \DUtitle[system-message]{system-message}
-\raisebox{1em}{\hypertarget{id33}{}}
+\raisebox{1em}{\hypertarget{id40}{}}
 
 {\color{red}ERROR/3} in \texttt{functional/input/standalone\_rst\_latex.txt}, line~363
 
-\hyperlink{id34}{
+\hyperlink{id41}{
 Unknown target name: ``5''.
 }}
 
 \DUadmonition[system-message]{
 \DUtitle[system-message]{system-message}
-\raisebox{1em}{\hypertarget{id35}{}}
+\raisebox{1em}{\hypertarget{id42}{}}
 
 {\color{red}ERROR/3} in \texttt{functional/input/data/standard.txt}, line~372
 
-\hyperlink{id36}{
+\hyperlink{id43}{
 Unknown target name: ``nonexistent''.
 }}
 
 \DUadmonition[system-message]{
 \DUtitle[system-message]{system-message}
-\raisebox{1em}{\hypertarget{id37}{}}
+\raisebox{1em}{\hypertarget{id44}{}}
 
 {\color{red}ERROR/3} in \texttt{functional/input/data/standard.txt}, line~399
 
-\hyperlink{id38}{
+\hyperlink{id45}{
 Unknown target name: ``hyperlink reference without a target''.
 }}
 
 \DUadmonition[system-message]{
 \DUtitle[system-message]{system-message}
-\raisebox{1em}{\hypertarget{id39}{}}
+\raisebox{1em}{\hypertarget{id46}{}}
 
 {\color{red}ERROR/3} in \texttt{functional/input/data/standard.txt}, line~412
 
-\hyperlink{id40}{
+\hyperlink{id47}{
 Duplicate target name, cannot be used as a unique reference: ``duplicate target names''.
 }}
 
